WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50682
feColorMatrix calculation for type matrix does not incorporate channel offsets
https://bugs.webkit.org/show_bug.cgi?id=50682
Summary
feColorMatrix calculation for type matrix does not incorporate channel offsets
Pieter Senster
Reported
2010-12-08 05:30:20 PST
In FEColorMatrix.cpp, the 'offset' matrix values (the fifth column in the matrix) are not used to calculate the result of a color transformation. The correct matrix multiplication is stated here:
http://www.w3.org/TR/SVG/filters.html#feColorMatrixElement
.
Attachments
Testcase for feColorMatrix using offsets
(861 bytes, image/svg+xml)
2010-12-08 08:06 PST
,
Pieter Senster
no flags
Details
Proposed patch
(21.61 KB, patch)
2010-12-09 03:18 PST
,
Pieter Senster
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pieter Senster
Comment 1
2010-12-08 08:06:05 PST
Created
attachment 75906
[details]
Testcase for feColorMatrix using offsets
Pieter Senster
Comment 2
2010-12-09 03:18:02 PST
Created
attachment 76037
[details]
Proposed patch
Nikolas Zimmermann
Comment 3
2010-12-09 04:10:59 PST
Looks good to me, adding Dirk to review.
Dirk Schulze
Comment 4
2010-12-10 06:37:08 PST
Comment on
attachment 76037
[details]
Proposed patch r=me. Sorry for the late response.
WebKit Commit Bot
Comment 5
2010-12-14 03:03:10 PST
Comment on
attachment 76037
[details]
Proposed patch Clearing flags on attachment: 76037 Committed
r74010
: <
http://trac.webkit.org/changeset/74010
>
WebKit Commit Bot
Comment 6
2010-12-14 03:03:15 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug