2010-12-14  Pieter Senster  <psenster@google.com>

Reviewed by Dirk Schulze.

        Test that the channel offsets in the ColorMatrix filter are correctly incorporated
        https://bugs.webkit.org/show_bug.cgi?id=50682

        * platform/mac/svg/filters/feColorMatrix-offset-expected.checksum: Added.
        * platform/mac/svg/filters/feColorMatrix-offset-expected.png: Added.
        * platform/mac/svg/filters/feColorMatrix-offset-expected.txt: Added.
        * svg/filters/feColorMatrix-offset.svg: Added.
2010-12-14  Pieter Senster  <psenster@google.com>

        Reviewed by Dirk Schulze.

        Incorporate the channel offsets from the ColorMatrix filter in the filter calculation
        https://bugs.webkit.org/show_bug.cgi?id=50682

        Test: svg/filters/feColorMatrix-offset.svg

        * platform/graphics/filters/FEColorMatrix.cpp:
        (WebCore::matrix):

Canonical link: https://commits.webkit.org/64359@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74010 268f45cc-cd09-0410-ab3c-d52691b4dbfc